cluster/apps/default/gns3/gns3.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gns3
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
