cluster/apps/default/gns3/gns3.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gns3
  namespace: gns3
spec:
  selector:
    matchLabels:
      app: gns3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gns3
    spec:
      containers:
        - name: gns3
          image: markmckessock/gns3server:v2.2.29
          imagePullPolicy: Always
          ports:
            - name: web-ui
              containerPort: 3080
          volumeMounts:
            - mountPath: /images
              name: images
            - mountPath: /projects
              name: projects
            - mountPath: /etc/xdg
              name: config-dir
          securityContext:
            privileged: true
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: images
        - name: projects
          persistentVolumeClaim:
            claimName: projects
        - name: config-dir
          emptyDir: {}
        - name: gns3-config
          configMap:
            name: gns3
        - name: gns3-controller-config
          configMap:
            name: gns3-controller
      nodeSelector:
        kubernetes.io/arch: amd64
